# SMTStabilizer

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  setup.py  vcpkg.json
.github/workflows/: Linux.yml  Windows.yml  ci.yml  docs.yml  macOS.yml
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_000003_000004.html  dir_000003_000005.html  dir_000004_000005.html  dir_000004_000006.html  dir_000005_000006.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_6cd8491d143eb218b70983dbdb3c58bc.html  dir_6cd8491d143eb218b70983dbdb3c58bc.js  dir_6cd8491d143eb218b70983dbdb3c58bc_dep.map  dir_6cd8491d143eb218b70983dbdb3c58bc_dep.md5  dir_b7878ad5ecbf2506f4125b9d34c97e45.html  dir_b7878ad5ecbf2506f4125b9d34c97e45.js  dir_cbd7f246bdf7dc0a50281a272327e6ed.html  dir_cbd7f246bdf7dc0a50281a272327e6ed.js  dir_cbd7f246bdf7dc0a50281a272327e6ed_dep.map  dir_cbd7f246bdf7dc0a50281a272327e6ed_dep.md5  dir_da61e3e9a357748887e3ca8d7c5a0c16.html  dir_da61e3e9a357748887e3ca8d7c5a0c16.js  dir_da61e3e9a357748887e3ca8d7c5a0c16_dep.map  dir_da61e3e9a357748887e3ca8d7c5a0c16_dep.md5  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  functions.html  functions_a.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_enum.html  functions_eval.html  functions_f.html  functions_func.html  functions_func_b.html  (+73 more)
docs/html/d0/d0e/: parser_8h__dep__incl.map  parser_8h__dep__incl.md5
docs/html/d0/d17/: interval_8h__incl.map  interval_8h__incl.md5
docs/html/d0/d25/: page_glossary.html
docs/html/d0/d28/: structstabilizer_1_1parser_1_1NodeHash.html  structstabilizer_1_1parser_1_1NodeHash.js
docs/html/d0/d2f/: structstabilizer_1_1parser_1_1Parser_1_1DTSelectorDecl.html  structstabilizer_1_1parser_1_1Parser_1_1DTSelectorDecl.js
docs/html/d0/d30/: md_README.html
docs/html/d0/d39/: stabilizer__c__api_8h__dep__incl.map  stabilizer__c__api_8h__dep__incl.md5
docs/html/d0/d5c/: structstabilizer__options__coll__graph.map  structstabilizer__options__coll__graph.md5
docs/html/d0/d61/: classstabilizer_1_1parser_1_1DAGNode-members.html
docs/html/d0/daa/: kernel_8h.html  kernel_8h_source.html
docs/html/d0/dca/: expr__parser_8cpp.html  expr__parser_8cpp.js  expr__parser_8cpp_source.html
docs/html/d0/de2/: structstabilizer_1_1parser_1_1PairNodePtrEqual-members.html
docs/html/d0/dfd/: sort_8cpp__incl.map  sort_8cpp__incl.md5
docs/html/d1/d01/: classstabilizer_1_1kernel_1_1Kernel.html  classstabilizer_1_1kernel_1_1Kernel.js
docs/html/d1/d0c/: classstabilizer_1_1parser_1_1Sort.html  classstabilizer_1_1parser_1_1Sort.js
docs/html/d1/d13/: stabilizer__api_8h__dep__incl.map  stabilizer__api_8h__dep__incl.md5
docs/html/d1/d25/: options_8h__dep__incl.map  options_8h__dep__incl.md5
docs/html/d1/d5d/: classstabilizer_1_1parser_1_1ConversionUtils.html
docs/html/d1/d69/: util__overview_8md.html
docs/html/d1/dad/: page_faq.html
docs/html/d1/dc1/: sort_8h__incl.map  sort_8h__incl.md5
docs/html/d1/dc4/: structstabilizer_1_1parser_1_1LetContext-members.html
docs/html/d1/dc5/: structstabilizer_1_1parser_1_1Parser_1_1DTSelectorDecl-members.html
docs/html/d1/dca/: classstabilizer_1_1parser_1_1ConversionUtils-members.html
docs/html/d1/df7/: namespacestabilizer_1_1kernel.html  namespacestabilizer_1_1kernel.js
docs/html/d1/df9/: bitvector_8cpp__incl.map  bitvector_8cpp__incl.md5
docs/html/d2/d07/: gmp__utils_8h__incl.map  gmp__utils_8h__incl.md5
docs/html/d2/d16/: gmp__utils_8cpp__incl.map  gmp__utils_8cpp__incl.md5
docs/html/d2/d1f/: page_kernel_overview.html
docs/html/d2/d3b/: kernel__overview_8md.html
docs/html/d2/d3d/: expr__parser_8cpp__incl.map  expr__parser_8cpp__incl.md5
docs/html/d2/d52/: classstabilizer_1_1parser_1_1Value.html  classstabilizer_1_1parser_1_1Value.js  stabilizer__c__api_8h__incl.map  stabilizer__c__api_8h__incl.md5
docs/html/d2/d55/: namespacestabilizer_1_1util.html  namespacestabilizer_1_1util.js
docs/html/d2/d56/: structstabilizer_1_1parser_1_1NodeHash-members.html
docs/html/d2/d74/: classstabilizer_1_1parser_1_1BitVectorUtils.html
docs/html/d2/d8a/: interval_8h.html  interval_8h.js  interval_8h_source.html
docs/html/d2/d9c/: page_parser_overview.html
docs/html/d2/da9/: dag_8cpp__incl.map  dag_8cpp__incl.md5
docs/html/d2/dae/: node__helper_8h__dep__incl.map  node__helper_8h__dep__incl.md5
docs/html/d2/db6/: classstabilizer_1_1parser_1_1FloatingPointUtils.html
docs/html/d2/dc0/: value_8cpp.html  value_8cpp.js  value_8cpp_source.html
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+105 more)
docs/pages/: api_kernel_boundary.md  faq.md  glossary.md  kernel_overview.md  mainpage.md  parser_overview.md  pipeline_walkthrough.md  util_overview.md
scripts/: run.sh
src/api/: CMakeLists.txt  c_api.cpp  stabilizer_api.cpp  stabilizer_api.h  stabilizer_c_api.h
src/kernel/: CMakeLists.txt  kernel.cpp  kernel.h
src/main/: CMakeLists.txt  main.cpp
src/node/: CMakeLists.txt  node_manager.cpp  node_manager.h
src/parser/: CMakeLists.txt  asserting.h  base_parser.cpp  dag.cpp  dag.h  expr_parser.cpp  interval.cpp  interval.h  kind.cpp  kind.h  number.cpp  number.h  op_parser.cpp  opt_parser.cpp  options.h  parser.h  rewrite_parser.cpp  sort.cpp  sort.h  util.cpp  util.h  value.cpp  value.h
src/util/: CMakeLists.txt  bitvector.cpp  bitvector.h  gmp_utils.cpp  gmp_utils.h  hash.cpp  hash.h  node_helper.cpp  node_helper.h
test/: CMakeLists.txt  api_tests.cpp
test/inputs/: rewrite_input.smt2  symmetric_input.smt2
(+267 files in other folders)
